Начало разработки страниц "Ведомости" роли "Деканат"

--- a/src/main/resources/static/Libs/select2-3.4.5/select2.css
+++ b/src/main/resources/static/Libs/select2-3.4.5/select2.css
@@ -306,7 +306,7 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
 
 /* results */
 .select2-results {
-    max-height: 200px;
+    max-height: 140px; /*200*/
     /*padding: 0 0 0 4px;*/
     padding: 0;
     /*margin: 4px 4px 4px 0;*/
