--- a/src/main/resources/static/Templates/contentAttestation.html
+++ b/src/main/resources/static/Templates/contentAttestation.html
@@ -2,7 +2,7 @@
 
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a ui-sref="attestation">Список действующих аттестаций</a></li>
-        <li class="breadcrumb-item"><a ui-sref="subject({id: attestationId})">Список групп</a></li>
+        <li class="breadcrumb-item"><a ui-sref="subject({id: attestationId})">Список дисциплин</a></li>
         <li class="breadcrumb-item active" aria-current="page">Редактирование аттестационной ведомости</li>
     </ol>
 
