--- a/src/main/resources/static/Templates/attestation.html
+++ b/src/main/resources/static/Templates/attestation.html
@@ -39,7 +39,7 @@
                         <a class="btn btn-info text-white"
                            type="button"
                            ng-click="transitionToSubject(attestation.id)"
-                           title="Перейти к списку групп">
+                           title="Перейти к списку дисциплин">
                             <i class="fa fa-share-square"></i>
                             Перейти
                         </a>
