--- a/src/main/resources/static/Templates/session.html
+++ b/src/main/resources/static/Templates/session.html
@@ -4,7 +4,7 @@
         <form class="simple-form" name="sessionDTOForm">
 
             <div class="font-weight-bold h4 text-center my-4">
-                Группы
+                Список дисциплин
             </div>
             <div class="col-lg-2 col-sm-3 mx-auto mb-4">
                 <ui-select ng-model="group.selected"
@@ -29,7 +29,7 @@
                     <tr>
                         <th class="text-center"></th>
                         <th class="text-center">Номер группы</th>
-                        <th class="text-center">Предмет</th>
+                        <th class="text-center">Дисциплина</th>
                         <th class="text-center">Форма аттестации</th>
                         <th class="text-center">Крайний срок внесения изменений
                             <i class="fa fa-info-circle text-info" data-toggle="tooltip" data-placement="top"
