--- a/src/main/resources/static/Templates/subject.html
+++ b/src/main/resources/static/Templates/subject.html
@@ -2,7 +2,7 @@
 
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a ui-sref="attestation">Список действующих аттестаций</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Список групп</li>
+        <li class="breadcrumb-item active" aria-current="page">Список дисциплин</li>
     </ol>
 
     <!-- Оставить заявку!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
@@ -12,7 +12,7 @@
         <form class="simple-form" name="subjectForm">
 
             <div class="font-weight-bold h4 text-center my-4">
-                Группы
+                Список дисциплин
             </div>
             <div class="col-lg-2 col-sm-3 mx-auto mb-4">
                 <ui-select ng-model="group.selected"
@@ -37,7 +37,7 @@
                     <tr>
                         <th class="text-center"></th>
                         <th class="text-center">Номер группы</th>
-                        <th class="text-center">Предмет</th>
+                        <th class="text-center">Дисциплина</th>
                         <th class="text-center"></th>
                     </tr>
                     </thead>
