--- a/src/main/resources/static/Templates/linkAttestationId.html
+++ b/src/main/resources/static/Templates/linkAttestationId.html
@@ -7,7 +7,7 @@
 
     <div class="p-0 my-4 card col-md-10 mx-auto border-info">
 
-        <div class="font-weight-bold h3 text-center mt-4">
+        <div class="font-weight-bold h3 text-center mt-4" ng-show="syllabusContentList.length">
             Группа: <div class="badge bg-aqua-gradient">{{group.number}}</div>
             <br>
             Текущий семестр: <div class="badge bg-aqua-gradient">{{group.curSemester}}</div>
