Разделение на две роли "Деканат" и "Зам. декана" + переписано получение данных о факультете (теперь через сущность "Деканат"). Закончено написание страницы "Назначение зав. каф." для роли "Деканат".

--- a/src/main/resources/static/Styles/main.css
+++ b/src/main/resources/static/Styles/main.css
@@ -70,6 +70,17 @@
     background: rgb(223, 240, 254);
     background: linear-gradient(135deg, rgb(223, 240, 254), rgb(240, 247, 253));
 }
+
+/* tab */
+.nav-pills>a {
+    color: #17A2B8 !important;
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    background-color: #17A2B8 !important;
+    color: #fff !important;
+}
+/* tab */
+
 /* Чтобы работали модалки в Bootstrap 4  либо добавить стили, либо замена в исходниках*/
 /* изменено modal-in-class in на show */
 /*.fade.in {
