--- a/src/main/resources/static/Templates/linkAttestation.html
+++ b/src/main/resources/static/Templates/linkAttestation.html
@@ -50,7 +50,7 @@
         </form>
 
         <div class="ng-hide font-weight-bold text-center m-2 p-2 alert-warning" ng-show="!groups.length && attestation.selected">
-            Группы отсутствуют
+            Группы на данном факультете отсутствуют
         </div>
 
         <div class="ng-hide my-3" ng-show="groups.length">
