--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible"
           content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/Images/logo.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/Images/logo.ico" type="image/x-icon">
 <!--    <link rel="icon" href="/Images/logo.ico" type="image/x-icon" sizes="32x32">-->
     <meta name="keywords" content="Личный кабинет преподавателей, БГТУ 'ВОЕНМЕХ' им. Д.Ф. Устинова">
@@ -240,6 +239,7 @@
     <script src="Controllers/Statements.js"></script>
     <script src="Controllers/StatementId.js"></script>
     <script src="Controllers/State.js"></script>
+    <script src="Controllers/SessionStatement.js"></script>
     <script src="Controllers/Students.js"></script>
 
 <!--    <script src="Controllers/AddSubgroup.js"></script>-->
