--- a/src/main/resources/static/Templates/assignment.html
+++ b/src/main/resources/static/Templates/assignment.html
@@ -1,26 +1,27 @@
 <div ng-show="ur == 'DEANERY'">
 
-    <div class="p-0 mt-4 card col-md-10 mx-auto border-info">
-
-        <div class="font-weight-bold h4 text-center mt-4">
-            <nav class="nav nav-pills nav-justified mx-3">
-                <a class="nav-item nav-link active">Назначение зав. каф.</a>
-                <a class="nav-item nav-link" href="#">Назначение зам. декана</a>
-            </nav>
+    <div class="p-0 col-md-10 mx-auto">
+        <div class="mt-5">
+            <div class="font-weight-bold h4 text-center m-0">
+                <nav class="nav nav-tabs nav-justified">
+                    <a class="nav-item nav-link active">Назначение зав. каф.</a>
+                    <a class="nav-item nav-link" href="#">Назначение зам. декана</a>
+                </nav>
+            </div>
         </div>
 
-        <div class="ng-hide font-weight-bold text-center m-2 p-2 alert-warning" ng-show="!departments.length">
-            Кафедры отсутствуют
-        </div>
+        <div class="card border-info">
+            <div class="ng-hide font-weight-bold text-center m-3 p-2 alert-warning" ng-show="!departments.length">
+                Кафедры отсутствуют
+            </div>
 
-        <div class="ng-hide my-5" ng-show="departments.length">
-            <table class="table table-hover table-striped table-responsive-xl">
+            <table class="my-5 table table-hover table-striped table-responsive-xl" ng-show="departments.length">
                 <thead>
                 <tr>
-                    <th class="text-center">Кафедра</th>
-                    <th class="text-center">Полное название</th>
-                    <th class="text-center w-25">Зав. каф.</th>
-                    <th class="text-center"></th>
+                    <th class="text-center border-white">Кафедра</th>
+                    <th class="text-center border-white">Полное название</th>
+                    <th class="text-center border-white w-25">Зав. каф.</th>
+                    <th class="text-center border-white"></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -50,7 +51,7 @@
                     <td class="text-center border-info">
                         <button class="btn btn-md text-white"
                                 ng-class="{'btn-warning': changes[$index],
-                                      'btn-info': !changes[$index]}"
+                                  'btn-info': !changes[$index]}"
                                 type="button"
                                 data-ng-click="saveHeadDepartment($index)"
                                 title="Сохранить изменения">
@@ -61,6 +62,7 @@
                 </tr>
                 </tbody>
             </table>
+
         </div>
 
     </div>
