--- a/src/main/resources/static/Templates/contentSession.html
+++ b/src/main/resources/static/Templates/contentSession.html
@@ -5,11 +5,11 @@
         <li class="breadcrumb-item active" aria-current="page">Редактирование сессионной ведомости</li>
     </ol>
 
-    <div class="my-3 pt-5 card col-md-10 mx-auto">
+    <div class="my-3 pt-5 card col-md-10 mx-auto border-info">
 
-        <div class="font-weight-bold h3 text-center" ng-show="attestation || disciplineName">
-            <pre ng-show="disciplineName">Дисциплина: <div class="badge bg-aqua-gradient">{{disciplineName}}</div></pre>
-            <pre ng-show="splitAttestationFormName">Форма аттестации:<div class="badge bg-aqua-gradient">{{splitAttestationFormName}}</div></pre>
+        <div class="font-weight-bold h3 text-center" ng-show="disciplineName || splitAttestationForm || deadlineDiscipline">
+            <pre ng-show="disciplineName">Дисциплина:<div class="badge bg-aqua-gradient">{{disciplineName}}</div></pre>
+            <pre ng-show="splitAttestationForm">Форма аттестации:<div class="badge bg-aqua-gradient">{{splitAttestationForm.name}}</div></pre>
             <pre ng-show="deadlineDiscipline">Крайний срок внесения изменений в ведомость: <div class="badge bg-aqua-gradient">{{deadlineDiscipline | date: 'dd.MM.yyyy'}}</div></pre>
             <hr>
         </div>
@@ -39,31 +39,41 @@
                         <th class="text-center">Имя</th>
                         <th class="text-center">Отчество</th>
                         <th class="text-center">Номер зачётной книжки</th>
-                        <th class="text-center" style="min-width: 15em">Оценивание</th>
-                        <th class="text-center ng-hide" ng-show="isHead">Назначенный преподаватель</th>
+                        <th class="text-center" ng-if="splitAttestationForm && splitAttestationForm.id === 1" style="min-width: 8em">Допуск</th>
+                        <th class="text-center" style="min-width: 10px; max-width: 10px">Оценивание</th>
                         <th class="text-center">Последние изменения</th>
+                        <th class="text-center ng-hide" ng-show="isHead">Назначенный преподаватель</th>
                     </tr>
                 </thead>
                 <tbody class="bg-aqua-gradient">
-                    <tr ng-repeat="cs in contentSession | orderBy:'student.surname' track by $index">
+                    <tr ng-repeat="cs in contentSession track by $index">
                         <td class="text-center">{{cs.student.surname}}</td>
                         <td class="text-center">{{cs.student.name}}</td>
                         <td class="text-center">{{cs.student.patronymic}}</td>
                         <td class="text-center">{{cs.student.numberRecordBook}}</td>
-                        <td class="text-center px-3">
+                        <td class="text-center" ng-if="splitAttestationForm && splitAttestationForm.id === 1">
+                            <select class="custom-select form-control col-md-12"
+                                    ng-change="checkChangesAdmittance(cs.admittance.id, $index)"
+                                    name="cs.admittance.id"
+                                    ng-model="cs.admittance.id"
+                                    ng-options="item.id as item.name for item in selectedAdmittance">
+                            </select>
+                        </td>
+                        <td class="text-center">
                            <!-- <i class="fa fa-info-circle text-info col-md-1" id="tooltipWorks[$index]" ng-show="cs.dateWorks" data-toggle="tooltip" data-placement="top"
                                title="Последние изменения внесены {{cs.dateWorks | date: 'dd.MM.yyyy в HH:mm'}} ({{cs.setWorksByTeacher.surname + ' ' + cs.setWorksByTeacher.initials}})">
                             </i>
-                            <i class="fa fa-info-circle text-warning col-md-1" ng-show="!cs.dateWorks"></i>-->
-                            <select class="custom-select form-control col-md-8"
-                                    ng-click="checkChanges()"
+                            <i class="fa fa-info-circle text-warning col-md-1" ng-show="!cs.dateWorks"></i>
+
+                            ng-disabled="cs.evaluation.id"
+                            ng-disabled="splitAttestationForm && splitAttestationForm.id === 1 && cs.admittance.id != 6"-->
+                            <select class="custom-select form-control col-md-12"
+                                    ng-disabled="splitAttestationForm && splitAttestationForm.id === 1 && !cs.admittance.id"
+                                    ng-change="checkChanges()"
                                     name="cs.evaluation.id"
                                     ng-model="cs.evaluation.id"
-                                    ng-options="item.id as item.name for item in selected">
+                                    ng-options="item.id as item.name for item in selected[$index]">
                             </select>
-                        </td>
-                        <td class="text-center pt-2 ng-hide" ng-show="isHead">
-                            {{cs.teacher ? cs.teacher.surname + ' ' + cs.teacher.name + ' ' + cs.teacher.patronymic : '-'}}
                         </td>
                         <td class="text-center">
                             <div ng-show="cs.date">
@@ -71,6 +81,9 @@
                                 <br>({{cs.date | date: 'dd.MM.yyyy в HH:mm'}})
                             </div>
                             <div ng-show="!cs.date">-</div>
+                        </td>
+                        <td class="text-center pt-2 ng-hide" ng-show="isHead">
+                            {{cs.teacher ? cs.teacher.surname + ' ' + cs.teacher.name + ' ' + cs.teacher.patronymic : '-'}}
                         </td>
                     </tr>
                 </tbody>
