--- a/src/main/resources/static/Templates/state.html
+++ b/src/main/resources/static/Templates/state.html
@@ -2,7 +2,7 @@
 
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a ui-sref="statements">Список аттестаций</a></li>
-        <li class="breadcrumb-item"><a ui-sref="statementId({id: statementsId})">Список групп</a></li>
+        <li class="breadcrumb-item"><a ui-sref="statementId({id: attestationId})">Список ведомостей. Аттестационные ведомости</a></li>
         <li class="breadcrumb-item active" aria-current="page">Просмотр ведомости</li>
     </ol>
 
@@ -10,7 +10,7 @@
 
         <div class="font-weight-bold h3 text-center" ng-show="attestation || disciplineName">
             <pre ng-show="attestation">Аттестация:<div class="badge bg-aqua-gradient">"{{attestation.name}}" (до {{attestation.deadline | date: 'dd.MM.yyyy'}})</div></pre>
-            <pre ng-show="disciplineName">Дисциплина: <div class="badge bg-aqua-gradient">{{disciplineName}}</div></pre>
+            <pre ng-show="disciplineName">Дисциплина:<div class="badge bg-aqua-gradient">{{disciplineName}}</div></pre>
             <hr>
         </div>
 
@@ -29,8 +29,8 @@
                         <th class="text-center">Имя</th>
                         <th class="text-center">Отчество</th>
                         <th class="text-center">Номер зачётной книжки</th>
-                        <th class="text-center" style="min-width: 10em">Работает</th>
-                        <th class="text-center" style="min-width: 10em">Аттестован</th>
+                        <th class="text-center" style="min-width: 7em">Работает</th>
+                        <th class="text-center" style="min-width: 7em">Аттестован</th>
                         <th class="text-center">Назначенный преподаватель</th>
                     </tr>
                 </thead>
@@ -42,10 +42,15 @@
                         <td class="text-center">{{ca.student.numberRecordBook}}</td>
                         <td class="text-center px-3">
                             <i class="fa fa-info-circle text-info col-md-1" ng-show="ca.dateWorks" data-toggle="tooltip" data-placement="top"
-                               title="Последние изменения внесены {{ca.dateWorks | date: 'dd.MM.yyyy в HH:mm'}} ({{ca.setWorksByTeacher.surname + ' ' + ca.setWorksByTeacher.initials}})">
+                               title="Последние изменения внесены {{ca.dateWorks | date: 'dd.MM.yyyy в HH:mm'}} ({{ca.setWorksByTeacher.surname +
+                               ' ' + ca.setWorksByTeacher.name + ' ' + ca.setWorksByTeacher.patronymic}})">
                             </i>
                             <i class="fa fa-info-circle text-warning col-md-1" ng-show="!ca.dateWorks"></i>
-                            <select class="custom-select form-control col-md-8"
+<!--                            <span class="border border-info rounded px-3 py-1" ng-show="ca.works == true">+</span>-->
+<!--                            <span class="border border-info rounded px-3 py-1" ng-show="ca.works == false">-</span>-->
+<!--                            <span class="border border-warning rounded px-3 py-1" ng-show="ca.works == null">&nbsp;&nbsp;</span>-->
+                            <select class="custom-select no-image col-md-6"
+                                    ng-class="{'border-info': ca.dateWorks, 'border-warning': !ca.dateWorks}"
                                     disabled="true"
                                     ng-model="ca.works"
                                     ng-options="item.key as item.value for item in selected">
@@ -53,10 +58,12 @@
                         </td>
                         <td class="text-center px-3">
                             <i class="fa fa-info-circle text-info col-md-1" ng-show="ca.dateAttest" data-toggle="tooltip" data-placement="top"
-                               title="Последние изменения внесены {{ca.dateAttest | date: 'dd.MM.yyyy в HH:mm'}} ({{ca.setAttestByTeacher.surname + ' ' + ca.setAttestByTeacher.initials}})">
+                               title="Последние изменения внесены {{ca.dateAttest | date: 'dd.MM.yyyy в HH:mm'}} ({{ca.setAttestByTeacher.surname +
+                               ' ' + ca.setAttestByTeacher.name + ' ' + ca.setAttestByTeacher.patronymic}})">
                             </i>
                             <i class="fa fa-info-circle text-warning col-md-1" ng-show="!ca.dateAttest"></i>
-                            <select class="custom-select form-control col-md-8"
+                            <select class="custom-select no-image col-md-6"
+                                    ng-class="{'border-info': ca.dateAttest, 'border-warning': !ca.dateAttest}"
                                     disabled="true"
                                     ng-model="ca.attest"
                                     ng-options="item.key as item.value for item in selected">
