--- a/src/main/resources/static/Templates/statementId.html
+++ b/src/main/resources/static/Templates/statementId.html
@@ -2,16 +2,15 @@
 
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a ui-sref="statements">Список аттестаций</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Список групп</li>
+        <li class="breadcrumb-item active" aria-current="page">Список ведомостей. Аттестационные ведомости</li>
     </ol>
 
-    <div class="py-4 mt-4 card col-md-10 mx-auto border-info">
+    <div class="py-4 px-0 my-4 card col-md-10 mx-auto border-info">
         <form class="simple-form" name="statementForm">
-            <div class="font-weight-bold h4 text-center my-4">
-                Список дисциплин
-            </div>
 
-            <div class="col-lg-3 col-sm-3 mx-auto mb-4">
+            <div class="font-weight-bold h4 text-center mt-4">Список ведомостей.</div>
+            <div class="font-weight-bold h4 text-center">Аттестационные ведомости</div>
+            <div class="col-sm-4 col-lg-3 mx-auto my-4">
                 <ui-select ng-model="group.selected"
                            ng-change="selectedOnGroupList()"
                            ng-disabled="!groupList.length"
@@ -28,38 +27,36 @@
                 </ui-select>
             </div>
 
-    <!--    <div class="card col-md-10 mx-auto p-0 border-info">-->
-
-            <div class="ng-hide font-weight-bold text-center m-2 p-2 alert-warning" ng-show="!groups.length">
+            <div class="ng-hide font-weight-bold text-center m-2 p-2 alert-warning" ng-show="!statements.length">
                 Ведомости не найдены
             </div>
 
-            <div ng-if="groups.length">
-                <table class="table table-hover table-striped table-sm table-responsive-sm">
-                    <thead>
-                    <tr>
-                        <th class="text-center">Номер группы</th>
-                        <th class="text-center">Предмет</th>
-                        <th class="text-center"></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="group in groups | orderBy:'disciplineName' track by $index">
-                        <td class="text-center border-info">{{group.groupNumber}}</td>
-                        <td class="text-center border-info">{{group.disciplineName}}</td>
-                        <td class="text-center border-info">
-                            <button class="btn btn-md btn-info text-white"
-                                    type="button"
-                                    ui-sref="state({id: group.certificationAttestationId, statementsId: group.attestationId})"
-                                    title="Редактировать ведомость группы">
-                                <i class="fa fa-share-square-o"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+            <table class="table table-hover table-striped table-sm table-responsive-sm" ng-if="statements.length">
+                <thead>
+                <tr>
+                    <th class="text-center">Номер группы</th>
+                    <th class="text-center">Предмет</th>
+                    <th class="text-center w-25"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="statement in statements | orderBy:'disciplineName' track by $index">
+                    <td class="text-center border-info">{{statement.groupNumber}}</td>
+                    <td class="text-center border-info">{{statement.disciplineName}}</td>
+                    <td class="text-center border-info">
+                        <button class="btn btn-md btn-info text-white"
+                                type="button"
+                                ui-sref="state({attestationId: statement.attestationId, certificationAttestationId: statement.certificationAttestationId})"
+                                title="Просмотр ведомости">
+                            <i class="fa fa-eye"></i>
+                            Просмотр ведомости
+                        </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
 
         </form>
     </div>
+
 </div>
